--- a/htrml/index.html
+++ b/htrml/index.html
@@ -6,6 +6,11 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <form>
+    <label for="Name">Name</label>
+    <input type="text" id="Name" required>
+    <label for="Password">Password</label>
+    <input type="text" id="Password" required>
+  </form>
 </body>
 </html>
