--- a/htrml/index.html
+++ b/htrml/index.html
@@ -9,8 +9,10 @@
   <form>
     <label for="Name">Name</label>
     <input type="text" id="Name" required>
+    <input type="submit">
     <label for="Password">Password</label>
     <input type="text" id="Password" required>
+    <input type="submit">
   </form>
 </body>
 </html>
