--- a/htrml/index.html
+++ b/htrml/index.html
@@ -13,6 +13,7 @@
     <label for="Password">Password</label>
     <input type="text" id="Password" required>
     <input type="submit">
+    <input type="checkbox" id="remember" name="remember" value="text">
   </form>
 </body>
 </html>
