add checkbox label

--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,8 @@
     <input type="text" id="Password" required>
     <input type="submit">
     <input type="checkbox" id="remember" name="remember" value="text">
+    <label for="remember">Jegyezze meg a jelszót.</label>
   </form>
 </body>
 </html>
+
