--- a/html/index.html
+++ b/html/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/style.css">
   <title>Document</title>
 </head>
-<body>
-  <form>
-    <label for="Name">Name</label>
-    <input type="text" id="Name" required>
-    <input type="submit">
-    <label for="Password">Password</label>
-    <input type="text" id="Password" required>
-    <input type="submit">
-    <input type="checkbox" id="remember" name="remember" value="text">
-    <label for="remember">Jegyezze meg a jelszót.</label>
-  </form>
-</body>
-</html>
 
+<body>
+  <div class="container">
+    <form>
+      <label for="name">Name</label>
+      <input type="text" id="name" required>
+      <input type="submit">
+      <label id="pass" for="password">Password</label>
+      <input type="password" id="password" required>
+      <input type="submit">
+      <div>
+        <input type="checkbox" id="remember" name="remember" value="text">
+        <label for="remember">Jegyezze meg a jelszót.</label>
+      </div>
+    </form>
+  </div>
+</body>
+
+</html>
